# HandoffRail

./: .env.example  .gitignore  ADOPTION-REPORT.md  Dockerfile  NEXT-STEPS.md  PERFORMANCE.md  PLAN.md  README.md  RELEASE.md  RESEARCH.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: docs-extra.css  mkdocs.yml
.github/workflows/: benchmarks.yml  ci.yml  deploy-pages.yml  publish.yml
benchmarks/: BENCHMARK-REPORT-2026-07-09.md  __init__.py  benchmark_concurrent_clients.py  benchmark_memory_profile.py  benchmark_packet_throughput.py  benchmark_webhook_latency.py  common.py
cli/: __init__.py  config.py  main.py  utils.py
cli/commands/: __init__.py  claim.py  create.py  errors.py  get.py  history.py  hooks.py  keys_cmd.py  list.py  respond.py  search.py  serve.py
docs/: README.md  api-reference.md  deployment.md  grafana-dashboard.json  monitoring.md  openapi.json  quickstart.md  sdk-guide.md
examples/: basic_handoff.py  chain_handoff.py
landing/: landing.html
loadtests/: __init__.py  locustfile.py
memory/: 2026-05-14.md  2026-05-30.md  autonomous-work-state.json
sdk/: README.md  pyproject.toml
sdk-typescript/: .eslintrc.json  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk-typescript/src/: async-client.ts  builders.ts  client.ts  errors.ts  index.ts  models.ts  ws-client.ts
sdk-typescript/src/integrations/: ai-sdk.ts
sdk-typescript/tests/: async-client.test.ts  builders.test.ts  client.test.ts  errors.test.ts  models.test.ts  ws-client.test.ts
sdk-typescript/tests/helpers/: test-server.ts
sdk-typescript/tests/integrations/: ai-sdk.test.ts
sdk/src/handoffrail/: __init__.py
sdk/src/handoffrail/integrations/: __init__.py  base.py  crewai.py  langchain.py
sdk/src/handoffrail/sdk/: __init__.py  async_client.py  builders.py  client.py  exceptions.py  models.py  sse_client.py  ws_client.py
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_tenants.py  0003_schemas.py  0004_rbac.py
server/app/: __init__.py  config.py  database.py  main.py
server/app/dashboard/: app.js  index.html  styles.css
server/app/middleware/: __init__.py  auth.py  rate_limit.py  rbac.py  size_limit.py
server/app/models/: __init__.py  db.py  packet.py
server/app/routers/: __init__.py  audit.py  dashboard.py  health.py  hooks.py  keys.py  metrics.py  packets.py  schemas.py  system.py  tenants.py  websocket.py
server/app/services/: __init__.py  expiry.py  redis_pubsub.py  schema_validator.py  ssrf.py  state_machine.py  tracing.py  webhook.py  websocket.py
server/schemas/: packet_v1.json
tests/: __init__.py  conftest.py  test_audit.py  test_batch.py  test_builders.py  test_cli.py  test_crewai_integration.py  test_integration_base.py  test_langchain_integration.py  test_lifecycle.py  test_packets.py  test_rbac.py  test_schemas.py  test_sdk_async_client.py  test_sdk_client.py  test_sdk_models.py  test_search.py  test_ssrf.py  test_system_health.py  test_tenants.py  test_tier2.py  test_websocket.py  test_week3.py  test_week7.py
tests/load/: __init__.py  locustfile.py  rest_benchmark.py  ws_load_test.py
