[project]
name = "handoffrail"
version = "0.1.0"
description = "Session-continuity middleware for multi-agent AI workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.scripts]
handoffrail = "cli.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/load"