[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "handoffrail-server"
version = "0.3.0"
description = "HandoffRail API Server — session-continuity middleware for multi-agent AI workflows"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "structlog>=24.1,<25.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27,<1.0",
    "prometheus-client>=0.20,<1.0",
    "websockets>=12.0,<15.0",
    "jsonschema>=4.20,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "respx>=0.21,<1.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]
prod = [
    "asyncpg>=0.29,<1.0",
    "celery[redis]>=5.3,<6.0",
    "redis[hiredis]>=5.0,<6.0",
]
otel = [
    "opentelemetry-api>=1.24,<2.0",
    "opentelemetry-sdk>=1.24,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"